--- a/Carousel_Automatic_with_Notes/index.html
+++ b/Carousel_Automatic_with_Notes/index.html
@@ -7,7 +7,12 @@
     <title>Carousel in Js</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Carousel</h1>
+    <div class="container"></div>
+    <div>
+        <button >Start</button>
+        <button>Stop</button>
+    </div>
 </body>
 </html>
 <script src="./index.js"></script>
