--- a/Carousel_Automatic_with_Notes/index.html
+++ b/Carousel_Automatic_with_Notes/index.html
@@ -22,6 +22,13 @@
         display: inline-block;
         font-size: 16px;
         border-radius: 10px;
+        cursor: pointer;
+      }
+
+      .button:hover {
+        background-color: rgb(69, 64, 64); /* Green */
+        color: white;
+        cursor: pointer;
       }
 
       #maindiv {
@@ -38,7 +45,6 @@
         box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
           rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
       }
-
     </style>
   </head>
   <body>
